fix alignment

--- a/design.css
+++ b/design.css
@@ -8,13 +8,13 @@ body {
 
 #qs {
   text-align: right;
-  padding-right: 30%;
-  padding-left: 5%;
+  padding-right: 25%;
+/*  padding-left: 5%;*/
 }
 #number1,#number2,#number3{
   padding-top: 3px;
   padding-bottom: 3px;
-  padding-left: 3px;
+  /*padding-left: 3px;*/
   width: 75px;
   font-family: monospace;
 }
